--- a/package.json
+++ b/package.json
@@ -13,19 +13,22 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^8.2.13",
+    "@angular/cdk": "~8.2.3",
     "@angular/common": "~8.2.4",
     "@angular/compiler": "~8.2.4",
     "@angular/core": "~8.2.4",
     "@angular/forms": "~8.2.4",
+    "@angular/material": "^8.2.3",
     "@angular/platform-browser": "~8.2.4",
     "@angular/platform-browser-dynamic": "~8.2.4",
     "@angular/router": "~8.2.4",
     "@types/d3": "^5.0.1",
     "@types/three": "^0.93.28",
-    "ngx-toastr": "^11.2.0",
-    "three": "^0.110.0",
     "d3": "^5.12.0",
+    "hammerjs": "^2.0.8",
+    "ngx-toastr": "^11.2.0",
     "rxjs": "~6.4.0",
+    "three": "^0.110.0",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
   },
