--- a/angular.json
+++ b/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "ngtemplate": {
+    "HelloDoJoFrontend": {
       "projectType": "application",
       "schematics": {},
       "root": "",
@@ -13,7 +13,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/ngtemplate",
+            "outputPath": "dist/HelloDoJoFrontend",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
@@ -65,18 +65,18 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "ngtemplate:build"
+            "browserTarget": "HelloDoJoFrontend:build"
           },
           "configurations": {
             "production": {
-              "browserTarget": "ngtemplate:build:production"
+              "browserTarget": "HelloDoJoFrontend:build:production"
             }
           }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "ngtemplate:build"
+            "browserTarget": "HelloDoJoFrontend:build"
           }
         },
         "test": {
@@ -114,16 +114,16 @@
           "builder": "@angular-devkit/build-angular:protractor",
           "options": {
             "protractorConfig": "e2e/protractor.conf.js",
-            "devServerTarget": "ngtemplate:serve"
+            "devServerTarget": "HelloDoJoFrontend:serve"
           },
           "configurations": {
             "production": {
-              "devServerTarget": "ngtemplate:serve:production"
+              "devServerTarget": "HelloDoJoFrontend:serve:production"
             }
           }
         }
       }
     }
   },
-  "defaultProject": "ngtemplate"
+  "defaultProject": "HelloDoJoFrontend"
 }
